--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <body>
         <div class="nav-bar"></div>
         <div id="app">
+          <product></product>
            <div class="product">
               <div class="product-image">
                  <img v-bind:src="image">
               </div>
               <div class="product-info">              
-                  <h1>{{product}}</h1>
-                  <p v-if="inventory > 10">In Stock</p>
-                  <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p>
+                  <h1>{{title}}</h1>
+                  <p v-if="inStock">In Stock</p>
                   <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
                   <ul>
                       <li v-for="detail in details">{{detail}}</li>
@@ -24,10 +24,10 @@
                       <li v-for="size in sizes">{{size}}</li>
                   </ul>
                   
-                  <div v-for="variant in variants" v-bind:key="variant.variantId"
+                  <div v-for="(variant , index) in variants" v-bind:key="variant.variantId"
                   class="color-box"
                   :style="{backgroundColor:variant.variantColor}"
-                  v-on:mouseover = "updateProduct(variant.variantImage)">
+                  v-on:mouseover = "updateProduct(index)">
                   </div>
                   
                   <button v-on:click= "addToCart" :disabled="!inStock"
